# CsvAutoGui

./: .gitignore  AGENTS.md  CsvAutoGuiBundle.spec  README.md  csv_schema.py  main.py  mainWindow.py  manager_logs.py  operation_contracts.py  pyproject.toml  pyproject_cpu.toml  pyproject_gpu.toml
.github/workflows/: release.yml
autogui/: README.md  __init__.py  autoOperator.py  backGroundInput.py  baseInput.py  config_paths.py  execution_watchdog.py  frontGroundInput.py  imageMatcher.py  log.py  mouseMode.py  notification_runtime.py  notifier.py  observed_input.py  ocr.py  parser.py  recordMode.py  recovery_runtime.py  resource_loader.py  runtime_config.py  scaleHelper.py  screenshotMode.py  script_runtime.py
autogui/execution/: __init__.py  operator.py  recovery.py  session.py
autogui/flow/: __init__.py  loader.py  models.py
autogui/infrastructure/: __init__.py  log.py  paths.py  scaling.py
autogui/input/: __init__.py  background.py  base.py  foreground.py  observed.py
autogui/notifications/: __init__.py  notifier.py  runtime.py
autogui/runtime/: __init__.py  cache.py  config.py  context.py
autogui/scripting/: __init__.py  resources.py  runtime.py
autogui/vision/: __init__.py  ocr.py  screenshot.py
config/: template.csv  test.csv
config/example/: choose.csv  choose2.csv  choose3.csv  example_script.py  example_script_resource.csv  idle.csv  input_actions.csv  main.csv  ocr_and_jump.csv  (+2 more)
csv_editor/: __init__.py  __main__.py  app.py  main_window.py  recording_dialog.py  theme.py  undo_commands.py
ocr_model/: README.md
scripts/: build_release.py
(+50 files in other folders)
