[project]
name = "autogui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pyautogui>=0.9.54",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"
default = true